--- a/Freedom/Freedom/Base.lproj/Main.storyboard
+++ b/Freedom/Freedom/Base.lproj/Main.storyboard
@@ -81,6 +81,9 @@ Upcoming</string>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <state key="normal" image="delete"/>
+                                            <connections>
+                                                <action selector="presentDeleteAlert:" destination="hK1-tp-3jD" eventType="touchUpInside" id="kqf-ov-P1L"/>
+                                            </connections>
                                         </button>
                                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vhc-cQ-x6v">
                                             <rect key="frame" x="16" y="10" width="78" height="78"/>
@@ -161,6 +164,9 @@ Upcoming</string>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.66666666669999997" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <state key="normal" image="delete"/>
+                                            <connections>
+                                                <action selector="presentDeleteAlert:" destination="50M-Qf-2X7" eventType="touchUpInside" id="aH6-Ec-YIK"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTf-vc-I68">
                                             <rect key="frame" x="102" y="11" width="38" height="34"/>
@@ -183,6 +189,8 @@ Upcoming</string>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="0.32394219029999999" green="0.36667718160000001" blue="0.9042699313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
+                                    <outlet property="deleteButton" destination="lgA-zh-cZl" id="Ybe-wZ-Y5n"/>
+                                    <outlet property="editButton" destination="TTf-vc-I68" id="jKD-ho-bWi"/>
                                     <outlet property="nameLabel" destination="OFI-dy-F2A" id="Fko-5w-E7v"/>
                                     <outlet property="photoImageView" destination="VQA-ma-fyE" id="VXo-6b-8eL"/>
                                     <outlet property="timeLeftLabel" destination="l5p-ZN-JoK" id="q02-QP-4ad"/>
