--- a/Freedom/Freedom/Base.lproj/Main.storyboard
+++ b/Freedom/Freedom/Base.lproj/Main.storyboard
@@ -295,7 +295,7 @@ Freevents</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xas-ZF-wxv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="URt-wv-ENy" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1576.8" y="-362.06896551724139"/>
+            <point key="canvasLocation" x="878" y="-312"/>
         </scene>
         <!--New Category-->
         <scene sceneID="fL9-iw-ePT">
@@ -356,6 +356,13 @@ Freevents</string>
                                                             <rect key="frame" x="10" y="10" width="200" height="200"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xA1-sG-164">
+                                                            <rect key="frame" x="0.0" y="0.0" width="220" height="220"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <connections>
+                                                                <action selector="selectCustomImage:" destination="dr1-UM-BEb" eventType="touchUpInside" id="a7l-VE-jp0"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
@@ -364,7 +371,7 @@ Freevents</string>
                                         <color key="backgroundColor" red="0.32156862749999998" green="0.36862745099999999" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <gestureRecognizers/>
                                         <connections>
-                                            <outletCollection property="gestureRecognizers" destination="UhL-OQ-Mqf" appends="YES" id="BkM-cb-slH"/>
+                                            <outletCollection property="gestureRecognizers" destination="hXI-ex-pXb" appends="YES" id="Jp2-Ut-O3z"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -396,13 +403,13 @@ Freevents</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="07Q-YA-jkr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="yQc-Cd-pG4" userLabel="Exit" sceneMemberID="exit"/>
-                <tapGestureRecognizer id="UhL-OQ-Mqf">
+                <tapGestureRecognizer id="hXI-ex-pXb">
                     <connections>
-                        <action selector="selectCustomImage:" destination="dr1-UM-BEb" id="VJ0-c5-iVb"/>
+                        <action selector="selectCustomImage:" destination="dr1-UM-BEb" id="xU8-eD-8N5"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1577" y="567"/>
+            <point key="canvasLocation" x="877.60000000000002" y="392.65367316341832"/>
         </scene>
         <!--New Freevent-->
         <scene sceneID="khT-Lq-NNN">
@@ -540,6 +547,13 @@ Freevents</string>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <gestureRecognizers/>
                                                         </imageView>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHn-Tf-Lvr">
+                                                            <rect key="frame" x="0.0" y="0.0" width="220" height="220"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <connections>
+                                                                <action selector="selectCustomImage:" destination="01c-K4-LfD" eventType="touchUpInside" id="i0R-Uw-jqd"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
@@ -548,7 +562,7 @@ Freevents</string>
                                         <color key="backgroundColor" red="0.32156862749999998" green="0.36862745099999999" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <gestureRecognizers/>
                                         <connections>
-                                            <outletCollection property="gestureRecognizers" destination="0qK-Z5-JTv" appends="YES" id="J8j-Ni-S0S"/>
+                                            <outletCollection property="gestureRecognizers" destination="yfL-w5-OZ7" appends="YES" id="5oo-ge-tRi"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="0hF-Y7-m8C">
@@ -613,13 +627,13 @@ Freevents</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Bz-lc-s5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="5dw-cy-HrG" userLabel="Exit" sceneMemberID="exit"/>
-                <tapGestureRecognizer id="0qK-Z5-JTv">
+                <tapGestureRecognizer id="yfL-w5-OZ7">
                     <connections>
-                        <action selector="selectCustomImage:" destination="01c-K4-LfD" id="JI8-Rh-EC2"/>
+                        <action selector="selectCustomImage:" destination="01c-K4-LfD" id="W5a-Ey-due"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3288.8000000000002" y="-362.06896551724139"/>
+            <point key="canvasLocation" x="1719" y="-313"/>
         </scene>
         <!--Date Picker View Controller-->
         <scene sceneID="SnD-QZ-jJo">
@@ -647,7 +661,7 @@ Freevents</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Si-Eh-mqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4223.1999999999998" y="-696.7016491754124"/>
+            <point key="canvasLocation" x="2582" y="-675"/>
         </scene>
         <!--Choose Category-->
         <scene sceneID="TBP-8m-FXk">
@@ -679,7 +693,7 @@ Freevents</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RQA-Cw-eeN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4223" y="22"/>
+            <point key="canvasLocation" x="2583" y="21"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bmb-ZR-zb5">
